# NN

./: CMakeLists.txt  backprop.py  classical.cpp  ep_cauchy.txt  ep_normal.txt  ga_blx_alpha_cauchy.txt  ga_blx_alpha_normal.txt  ga_sbx_cauchy.txt  ga_sbx_normal.txt  graph.txt  losses.txt  pca_mnist.py  plot.py  ps.txt  quanten.cpp  rapidcsv.h  scaling.py  scaling_test2.txt
.cache/clangd/index/: classical.cpp.B21796138976A450.idx  classical.cpp.CD4CEFDF0E9979B8.idx  rapidcsv.h.BEC76A12A8FF740A.idx
data/: X_test.csv  X_train.csv
libqenv-dev/: QenvConfig.cmake
